<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Цена:</string>
    <string name="min_price_label">Минимум за день:</string>
    <string name="max_price_label">Максимум за день:</string>
    <string name="last_market_label">Последняя сделка:</string>
    <string name="last_updated_label">Обновлено:</string>
    <string name="detail_info">Detail Information</string>
    <string name="name_news">Название новости</string>
    <string name="title_news">Заголовок: %s</string>
    <string name="news_crypto">Новости криптовалют</string>
    <string name="body_news">Описание: \n%s</string>
    <string name="step_to_page_news">Открыть статью</string>
</resources>